changed tag to latest
Signed-off-by: Jarek Cwiklik <cwiklik@mac.lan>

--- a/.github/workflows/beeai-build.yml
+++ b/.github/workflows/beeai-build.yml
@@ -45,4 +45,4 @@ jobs:
       with:
         context: beeai
         push: true
-        tags: ghcr.io/kagenti/kagenti-operator/beeai-operator:${{ github.sha }} 
+        tags: ghcr.io/kagenti/kagenti-operator/beeai-operator:latest
