add beeai chart
Signed-off-by: Jarek Cwiklik <cwiklik@mac.lan>

--- a/.github/workflows/beeai-build.yml
+++ b/.github/workflows/beeai-build.yml
@@ -59,6 +59,7 @@ jobs:
     - name: Package and push beeai chart
       run: |
         chartVersion=$(echo ${{ github.ref_name }} | cut -c 2-)
-        cd beeai && make build-image && cd - # Build Docker image
-        helm package charts/beeai-operator --destination . --version ${chartVersion} --app-version ${chartVersion}
-        helm push ./beeai-operator-${chartVersion}.tgz oci://${{ env.REGISTRY }}/${{ env.REPO }}
+        helm package ${{ env.CHARTS_PATH }}/beeai-operator --destination . --version ${chartVersion} --app-version ${chartVersion}
+        ls -l # List files to check the generated filename
+        echo "Chart version: ${chartVersion}"
+        helm push ./beeai-operator-chart-${chartVersion}.tgz oci://${{ env.REGISTRY }}/${{ env.REPO }}
