changed the package name
Signed-off-by: Jarek Cwiklik <cwiklik@mac.lan>

--- a/.github/workflows/beeai-build.yml
+++ b/.github/workflows/beeai-build.yml
@@ -60,8 +60,9 @@ jobs:
       run: |
         chartVersion=0.0.1
         repoName=${{ github.event.repository.name }}
-        chartPackageName="kagenti-beeai-cha-${chartVersion}.tgz"
+        chartPackageName="kagenti-beeai-operator-chart-${chartVersion}.tgz"
         helm package ${{ env.CHARTS_PATH }}/beeai-operator --destination . --version ${chartVersion} --app-version ${chartVersion}
+        mv kagenti-operator-${chartVersion}.tgz ${chartPackageName} 
         ls -l # List files to check the generated filename
         echo "Chart version: ${chartVersion}"
         helm push "./${chartPackageName}" oci://${{ env.REGISTRY }}/${{ env.REPO }}
