push chart to ghcr.io repo
Signed-off-by: Jarek Cwiklik <cwiklik@mac.lan>

--- a/.github/workflows/beeai-build.yml
+++ b/.github/workflows/beeai-build.yml
@@ -64,4 +64,4 @@ jobs:
         helm package . --destination . --version ${chartVersion} --app-version ${chartVersion}
         ls -l # List files to check the generated filename
         echo "Chart version: ${chartVersion}" 
-       
+        helm push "./${chartPackageName}" oci://${{ env.REGISTRY }}/${{ env.REPO }}
