force build to generate multiplatform image
Signed-off-by: Jarek Cwiklik <cwiklik@mac.lan>

--- a/.github/workflows/beeai-build.yml
+++ b/.github/workflows/beeai-build.yml
@@ -54,6 +54,7 @@ jobs:
       with:
         context: beeai
         push: true
+        platforms: linux/amd64,linux/arm64
         tags: ghcr.io/kagenti/kagenti-operator/beeai-operator:latest
 
     - name: Package and push beeai chart
