Modified to support source repo which uses subfolders containing agent source code. Updated documentation
Signed-off-by: Jarek Cwiklik <cwiklik@mac.lan>

--- a/beeai/config/crd/bases/beeai.beeai.dev_agentbuilds.yaml
+++ b/beeai/config/crd/bases/beeai.beeai.dev_agentbuilds.yaml
@@ -389,6 +389,11 @@ spec:
                 description: Revision is the Git revision to checkout (branch, tag,
                   commit SHA)
                 type: string
+              sourceSubfolder:
+                description: |-
+                  Name of subfolder containing the agent source code. Supports a repo with
+                  many agents, each isolated in a dedicated folder
+                type: string
             required:
             - image
             - imageRegistry
