--- a/.github/workflows/beeai-build.yml
+++ b/.github/workflows/beeai-build.yml
@@ -55,11 +55,11 @@ jobs:
         context: beeai
         push: true
         platforms: linux/amd64,linux/arm64
-        tags: ghcr.io/kagenti/kagenti-operator/beeai-operator:latest
+        tags: ghcr.io/kagenti/kagenti-operator/beeai-operator:v0.0.1
 
     - name: Package and push beeai chart
       run: |
-        chartVersion=0.0.1   
+        chartVersion=0.0.2
         chartPackageName="kagenti-beeai-operator-chart-${chartVersion}.tgz"
         cd ${{ env.CHARTS_PATH }}/beeai-operator 
         helm package . --destination . --version ${chartVersion} --app-version ${chartVersion}
