fixed bug in llama github workflow
Signed-off-by: Jarek Cwiklik <cwiklik@mac.lan>

--- a/charts/llama-operator/Chart.yaml
+++ b/charts/llama-operator/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: k8gentai
+name: kagenti-llama-operator-chart
 description: A Helm chart to distribute the project k8gentai
 type: application
 version: 0.1.0
