updated example to trigger pod cleanup after build
Signed-off-by: Jarek Cwiklik <cwiklik@mac.lan>

--- a/beeai/config/crd/bases/beeai.beeai.dev_agentbuilds.yaml
+++ b/beeai/config/crd/bases/beeai.beeai.dev_agentbuilds.yaml
@@ -244,6 +244,10 @@ spec:
                         type: object
                     type: object
                 type: object
+              cleanupAfterBuild:
+                description: DeployAfterBuild indicates whether to automatically deploy
+                  the agent after build
+                type: boolean
               deployAfterBuild:
                 description: DeployAfterBuild indicates whether to automatically deploy
                   the agent after build
