update rbac to allow pod list and delete
Signed-off-by: Jarek Cwiklik <cwiklik@mac.lan>

--- a/beeai/config/rbac/role.yaml
+++ b/beeai/config/rbac/role.yaml
@@ -22,6 +22,15 @@ rules:
 - apiGroups:
   - ""
   resources:
+  - pods
+  verbs:
+  - get
+  - list
+  - watch
+  - delete  
+- apiGroups:
+  - ""
+  resources:
   - services
   verbs:
   - create
