added new ns to trigger build
Signed-off-by: Jarek Cwiklik <cwiklik@mac.lan>

--- a/.github/workflows/beeai-build.yml
+++ b/.github/workflows/beeai-build.yml
@@ -14,6 +14,7 @@ on:
     branches:
       - main
       - tekton-pod-cleanup
+      - namespace-support
     paths:
       - 'beeai/**'
   pull_request:
