initial implementation supporting kubernetes deployments
Signed-off-by: Jarek Cwiklik <cwiklik@mac.lan>

--- a/platform-operator/config/crd/kustomization.yaml
+++ b/platform-operator/config/crd/kustomization.yaml
@@ -2,8 +2,8 @@
 # since it depends on service name and namespace that are out of this kustomize package.
 # It should be run by config/default
 resources:
-- bases/kagenti.operator.dev.kagenti.operator.dev_components.yaml
-- bases/kagenti.operator.dev.kagenti.operator.dev_platforms.yaml
+- bases/kagenti.operator.dev_components.yaml
+- bases/kagenti.operator.dev_platforms.yaml
 # +kubebuilder:scaffold:crdkustomizeresource
 
 patches:
