--- a/platform-operator/config/rbac/role.yaml
+++ b/platform-operator/config/rbac/role.yaml
@@ -5,9 +5,60 @@ metadata:
   name: manager-role
 rules:
 - apiGroups:
-  - kagenti.operator.dev.kagenti.operator.dev
+  - ""
+  resources:
+  - configmaps
+  - secrets
+  - services
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - apps
+  resources:
+  - deployments
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - kagenti.operator.dev
   resources:
   - components
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - kagenti.operator.dev
+  resources:
+  - components/finalizers
+  verbs:
+  - update
+- apiGroups:
+  - kagenti.operator.dev
+  resources:
+  - components/status
+  verbs:
+  - get
+  - patch
+  - update
+- apiGroups:
+  - kagenti.operator.dev.kagenti.operator.dev
+  resources:
   - platforms
   verbs:
   - create
@@ -20,14 +71,12 @@ rules:
 - apiGroups:
   - kagenti.operator.dev.kagenti.operator.dev
   resources:
-  - components/finalizers
   - platforms/finalizers
   verbs:
   - update
 - apiGroups:
   - kagenti.operator.dev.kagenti.operator.dev
   resources:
-  - components/status
   - platforms/status
   verbs:
   - get
