--- a/.github/workflows/beeai-build.yml
+++ b/.github/workflows/beeai-build.yml
@@ -49,7 +49,7 @@ jobs:
       with:
         registry: ghcr.io
         username: ${{ github.actor }}
-        password: ${{ secrets.GHCR_TOKEN }}
+        password: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Build and Push Docker Image (GHCR)
       uses: docker/build-push-action@v5
