--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -2,7 +2,7 @@ version: 2
 builds:
 - id: "beeai"
   main: ./beeai/cmd
-  binary: bin/beeai
+  binary: ./beeai/bin/manager
   goos:
   - linux
   - darwin
