--- a/platform-operator/config/samples/agent-component-no-build.yaml
+++ b/platform-operator/config/samples/agent-component-no-build.yaml
@@ -1,13 +1,13 @@
 apiVersion: kagenti.operator.dev/v1alpha1
 kind: Component
 metadata:
-  name: my-agent
+  name: research-agent
 spec:
   description: My first agent component
   agentComponent:
   
   deployer:
-    name: "my-agent-deployment"
+    name: "research-agent-deployment"
     namespace: "default"
     deployAfterBuild: true
     kubernetes:
