added platform chart,install script,added examples
Signed-off-by: Jarek Cwiklik <cwiklik@mac.lan>

--- a/platform-operator/config/samples/agent-component-no-build.yaml
+++ b/platform-operator/config/samples/agent-component-no-build.yaml
@@ -3,7 +3,7 @@ kind: Component
 metadata:
   name: research-agent
 spec:
-  description: My first agent component
+  description: My research agent component
   agentComponent:
   
   deployer:
