--- a/platform-operator/config/tekton/github-clone-step.yaml
+++ b/platform-operator/config/tekton/github-clone-step.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
    name: github-clone-step
+   namespace: kagenti-system  
    labels:
          kagenti.operator.dev/tekton: step 
 data:
