--- a/platform-operator/config/tekton/kaniko-build-step.yaml
+++ b/platform-operator/config/tekton/kaniko-build-step.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: kaniko-docker-build-step
+  namespace: kagenti-system  
   labels:
     kagenti.operator.dev/tekton: step 
 data:
