--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -62,5 +62,15 @@ jobs:
         ls -l # List files to check the generated filename
         echo "Chart version: ${chartVersion}" 
         helm push "./${chartPackageName}" oci://${{ env.REGISTRY }}/${{ env.REPO }}
+
+    - name: Package and push platoform operator chart
+      run: |
+        chartVersion=$(echo ${{ github.ref_name }} | cut -c 2-)
+        chartPackageName="kagenti-platform-operator-chart-${chartVersion}.tgz"
+        cd ${{ env.CHARTS_PATH }}/platform-operator 
+        helm package . --destination . --version ${chartVersion} --app-version ${chartVersion}
+        ls -l # List files to check the generated filename
+        echo "Chart version: ${chartVersion}" 
+        helm push "./${chartPackageName}" oci://${{ env.REGISTRY }}/${{ env.REPO }}        
     
      
