--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -15,6 +15,21 @@ builds:
     goarch: ppc64le
   env:
   - CGO_ENABLED=0
+- id: "platform-operator" 
+  dir: platform-operator  
+  main: ./cmd  
+  binary: ./bin/manager 
+  goos:  
+  - linux
+  - darwin
+  goarch:   
+  - amd64
+  - arm64
+  ignore:
+  - goos: darwin
+    goarch: ppc64le
+  env: 
+  - CGO_ENABLED=0  
 archives:
 - ids: [beeai]
 kos:           
@@ -32,6 +47,20 @@ kos:
     - linux/amd64
     - linux/arm64
     env:
+    - CGO_ENABLED=0
+    - ghcr.io/kagenti/kagenti-operator/platform-operator 
+    working_dir: platform-operator 
+    main: ./cmd  
+    build: platform-operator
+    tags:
+    - '{{.Version}}'
+    - latest
+    bare: true
+    preserve_import_paths: false
+    platforms: 
+    - linux/amd64
+    - linux/arm64
+    env: 
     - CGO_ENABLED=0
 release:
   draft: false
