--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -33,8 +33,7 @@ builds:
 archives:
 - ids: [beeai,platform-operator]
 kos:           
-  - repositories: 
-    - ghcr.io/kagenti/kagenti-operator/beeai-operator
+    - repository: ghcr.io/kagenti/kagenti-operator/beeai-operator
       working_dir: beeai
       main: ./cmd
       build: beeai
@@ -48,7 +47,7 @@ kos:
         - linux/arm64
       env:
         - CGO_ENABLED=0
-    - ghcr.io/kagenti/kagenti-operator/platform-operator 
+    - repository: ghcr.io/kagenti/kagenti-operator/platform-operator 
       working_dir: platform-operator 
       main: ./cmd  
       build: platform-operator
